Add custom database entities, repositories, and emergency report service integrations